/**
 * Licensed to the Apache Software Foundation (ASF) under one
 * or more contributor license agreements.  See the NOTICE file
 * distributed with this work for additional information
 * regarding copyright ownership.  The ASF licenses this file
 * to you under the Apache License, Version 2.0 (the
 * "License"); you may not use this file except in compliance
 * with the License.  You may obtain a copy of the License at
 *
 *   http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing,
 * software distributed under the License is distributed on an
 * "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
 * KIND, either express or implied.  See the License for the
 * specific language governing permissions and limitations
 * under the License.
 */
syntax = "proto3";

package pulsar.grpc.proto;

option java_multiple_files = true;
option java_package = "org.apache.pulsar.grpc.proto";
option java_outer_classname = "GrpcProxy";

service Pulsar {
    rpc Produce(stream ProducerMessage) returns (stream ProducerAck);
    rpc Consume(stream ConsumerAck) returns (stream ConsumerMessage);
    rpc Read(stream ConsumerAck) returns (stream ConsumerMessage);
}

message ProducerMessage {
    bytes payload = 1;
    map<string, string> properties = 2;
    string context = 3;
    string key = 4;
    repeated string replicationClusters = 5;
}

message ProducerAck {
    uint32 status_code = 1;
    string error_msg = 2;
    bytes message_id = 3;
    string context = 4;
}

message ConsumerMessage {
    bytes message_id = 1;
    bytes payload = 2;
    map<string, string> properties = 3;
    uint64 publish_time = 4;
    uint64 event_time = 5;
    string key = 6;
}

message ConsumerAck {
    bytes messageId = 1;
}